Added blib about myself to index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
       <!-- to here  -->
 
       <!-- paste what you copied directly below here -->
+      <!-- copy from here -->
+      <div class="about">
+        <div class="bio-left">
+          <img src="rosie-the-kraken.png"/>
+        </div>
+        <div class="bio-right">
+          <h2>Suvi the Robot</h2>
+          <p> My name is Suvi and I want to be a millionaire and live my life in comfort! </p>
+        </div>
+      </div>
+      <!-- to here  -->
 
 
   </main>
