i made a change about Jacob

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 
       <!-- copy from here -->
       <div class="about">
+          <p>my name is jacob I like the gaming club</p>
+     </div>
         <div class="bio-left">
+          <p>I am big gamer for the gaming club </p>
           <img src="rosie-the-kraken.png"/>
         </div>
         <div class="bio-right">
